Delaunay test plus small fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,5 +55,6 @@ add_executable(tests
 	tests/procrustes.cpp
 	tests/map.cpp
 	tests/barycentrics.cpp
+	tests/delaunay.cpp
 )
 target_link_libraries(tests aam ${OpenCV_LIBRARIES})
