added matcher (empty so far...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(aam
 	inc/aam/rasterization.h
 	inc/aam/bilinear.h
 	inc/aam/model.h
+	inc/aam/matcher.h
     inc/aam/trainingset.h
 	inc/aam/trainer.h
     inc/aam/transform.h
@@ -46,6 +47,7 @@ add_library(aam
 	src/delaunay.cpp
 	src/rasterization.cpp
 	src/model.cpp
+	src/matcher.cpp
 	src/trainer.cpp
     src/transform.cpp
 	src/io/serialization.cpp
